--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -21,10 +21,11 @@
 buildscript {
     repositories {
         maven { url 'https://maven.fabric.io/public' }
+        maven { url 'https://maven.google.com' }
     }
 
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'io.fabric.tools:gradle:1.25.2'
     }
 }
 apply plugin: 'com.android.application'
@@ -36,13 +37,12 @@ repositories {
 
 android {
 
-    compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 27
     defaultConfig {
         resValue "string", "beacon_layout", "\"m:2-3=0215,i:4-19,i:20-21,i:22-23,p:24-24\""
         applicationId "mycroft.ai"
         minSdkVersion 21
-        targetSdkVersion 24
+        targetSdkVersion 27
         versionCode project.ext.versionCode
         versionName project.ext.versionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -56,32 +56,32 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 
 
-    compile 'org.altbeacon:android-beacon-library:2.11'
-    compile 'com.android.support:appcompat-v7:24.0.0'
-    compile 'com.android.support:design:24.0.0'
-    compile 'org.java-websocket:Java-WebSocket:1.3.0'
-    compile 'com.android.support:support-v4:24.0.0'
+    implementation 'org.altbeacon:android-beacon-library:2.11'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:design:27.1.0'
+    implementation 'org.java-websocket:Java-WebSocket:1.3.0'
+    implementation 'com.android.support:support-v4:27.1.0'
     // layout deps
-    compile 'com.android.support:cardview-v7:24.0.+'
-    compile 'com.android.support:recyclerview-v7:24.0.+'
+    implementation 'com.android.support:cardview-v7:27.1.0'
+    implementation 'com.android.support:recyclerview-v7:27.1'
     // Unit test dependencies
-    testCompile 'org.mockito:mockito-core:1.10.19'
-    testCompile 'org.powermock:powermock-api-mockito:1.6.4'
-    testCompile 'org.powermock:powermock-module-junit4-rule-agent:1.6.4'
-    testCompile 'org.powermock:powermock-module-junit4-rule:1.6.4'
-    testCompile 'org.powermock:powermock-module-junit4:1.6.4'
-    testCompile 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'org.powermock:powermock-api-mockito:1.6.4'
+    testImplementation 'org.powermock:powermock-module-junit4-rule-agent:1.6.4'
+    testImplementation 'org.powermock:powermock-module-junit4-rule:1.6.4'
+    testImplementation 'org.powermock:powermock-module-junit4:1.6.4'
+    testImplementation 'junit:junit:4.12'
     // Instrumentation dependencies
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-    androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile 'com.android.support:support-annotations:24.0.0'
-    compile('com.crashlytics.sdk.android:crashlytics:2.5.7@aar') {
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support:support-annotations:27.1.0'
+    implementation('com.crashlytics.sdk.android:crashlytics:2.5.7@aar') {
         transitive = true;
     }
-    compile 'com.google.android.gms:play-services-wearable:9.4.0'
+    implementation 'com.google.android.gms:play-services-wearable:12.0.1'
     wearApp project(':wear')
-    compile project(':shared')
+    implementation project(':shared')
 }
