--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -23,12 +23,11 @@ apply plugin: 'com.android.application'
 
 android {
 
-    compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 27
     defaultConfig {
         applicationId 'mycroft.ai'
         minSdkVersion 20
-        targetSdkVersion 24
+        targetSdkVersion 27
         versionCode project.ext.versionCode
         versionName project.ext.versionName
     }
@@ -43,8 +42,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.google.android.support:wearable:2.0.0-alpha2'
-    compile 'com.google.android.gms:play-services-wearable:9.4.0'
-    compile project(':shared')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:support-fragment:27.1.0'
+
+    implementation project(':shared')
 }
