--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -26,7 +26,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId 'mycroft.ai'
-        minSdkVersion 20
+        minSdkVersion 23
         targetSdkVersion 27
         versionCode project.ext.versionCode
         versionName project.ext.versionName
@@ -43,7 +43,14 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:support-fragment:27.1.0'
+
+    implementation 'com.google.android.support:wearable:2.3.0'
+    implementation 'com.google.android.gms:play-services-wearable:12.0.1'
+    implementation 'com.android.support:percent:27.1.0'
+    implementation 'com.android.support:support-v4:27.1.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
+    implementation 'com.android.support:wear:27.1.0'
+    compileOnly 'com.google.android.wearable:wearable:2.3.0'
 
     implementation project(':shared')
 }
